fix: resolve section overflow overlaps on smaller screens by converting hard heights to min-height

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,7 +1,8 @@
 @media screen and (max-width: 1400px) {
     #profile   {
-        height: 83vh;
-        margin-bottom: 6rem;
+        min-height: 80vh;
+        height: auto;
+        margin-bottom: 3rem;
     }
     .about-containers{
         flex-wrap: wrap;
@@ -32,7 +33,8 @@
         display: none;
     }
   section, .section-container{
-    height: fit-content;
+    height: auto;
+    min-height: fit-content;
 
 
   }
@@ -52,10 +54,13 @@
 }
 @media screen and (max-width: 600px) {
    #contact, footer{
-    height: 40vh;
+    height: auto;
+    min-height: fit-content;
+    padding: 2rem 0;
    }
    #profile{
-    height: 83vh;
+    height: auto;
+    min-height: 80vh;
     margin-bottom: 0;
    }
    article{
